# Socrates-Cube

./: .env.example  .gitignore  Phase_2_详细任务安排_5月18日-5月24日(1).md  Phase_3_详细任务安排_5月25日-5月31日(1).md  README.md  git-commit-history.txt  package-lock.json  pyproject.toml  requirements.txt
config/: api_schema.yaml
config/prompts/challenger/: challenge.txt
config/prompts/diagnosis/: pattern_match.txt  root_cause.txt  surface_error.txt
config/prompts/orchestrator/: route.txt
config/prompts/path_planner/: plan_path.txt
config/prompts/profiler/: extract_profile.txt  update_profile.txt
config/prompts/resource_generator/: generate_code.txt  generate_doc.txt  (+1 more)
docs/: 项目定位说明.md
docs/architecture/: Agent通信State设计.md  系统开发说明书_v1.md
docs/deployment/: 环境初始化说明.md
docs/references/: 知识库资料清单.md
docs/requirements/: SRS_v1.md  prompt_compliance_check.md  核心创新点落地方案.md  竞品分析与理论支撑说明.md
docs/results/: demo_script_7min.md  phase1_issues.md  phase2_issues.md  phase3_issues.md  phase4_acceptance_results.md
docs/test/: phase3_acceptance_cases.md  测试说明书_v1.md
frontend/: .env.example  .gitignore  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.ts
frontend/src/: App.vue  env.d.ts  main.ts
scripts/: check_db.py  download_knowledge_sources.py  full_verify.py  gen_kg.py  ingest_docs.py  init_db.py  test_e2e.py  test_imports.py  verify_env.py  verify_result.txt
src/loopse/: main.py
tests/: test_student_profile_schema.py
tests/unit/: test_diagnosis_agent.py  test_llm_client.py  test_resource_generator.py
(+88 files in other folders)
